--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -84,8 +84,8 @@ a {
   margin-bottom: $cassiopeia-grid-gutter;
   > .input-group-append {
     > .btn-primary {
-      @include border-right-radius($border-radius);
-      @include border-left-radius(0);
+      @include border-end-radius($border-radius);
+      @include border-start-radius(0);
     }
     > .btn-secondary {
       margin-left: $cassiopeia-grid-gutter/2;
@@ -95,16 +95,16 @@ a {
   > input {
     padding: $cassiopeia-grid-gutter/2;
     border: 1px solid $gray-400;
-    @include border-left-radius($border-radius);
-    @include border-right-radius(0);
+    @include border-start-radius($border-radius);
+    @include border-end-radius(0);
   }
 }
 
 [dir="rtl"] .btn-group {
   > .input-group-append {
     > .btn-primary {
-      @include border-left-radius($border-radius);
-      @include border-right-radius(0);
+      @include border-start-radius($border-radius);
+      @include border-end-radius(0);
     }
 
     > .btn-secondary {
@@ -114,8 +114,8 @@ a {
   }
 
   > input {
-    @include border-right-radius($border-radius);
-    @include border-left-radius(0);
+    @include border-end-radius($border-radius);
+    @include border-start-radius(0);
   }
 }
 
