--- a/templates/cassiopeia/scss/template-rtl.scss
+++ b/templates/cassiopeia/scss/template-rtl.scss
@@ -65,7 +65,7 @@ body,
 // SearchTools rounded corners
 .awesomplete {
   input {
-    @include border-left-radius(0);
+    @include border-start-radius(0);
   }
 }
 
@@ -75,8 +75,8 @@ body,
 .input-group > .input-group-append:not(:last-child) > .input-group-text,
 .input-group > .input-group-append:last-child > .btn:not(:last-child):not(.dropdown-toggle),
 .input-group > .input-group-append:last-child > .input-group-text:not(:last-child) {
-  @include border-left-radius($border-radius);
-  @include border-right-radius(0);
+  @include border-start-radius($border-radius);
+  @include border-end-radius(0);
 }
 
 .input-group > .input-group-append > .btn,
@@ -85,31 +85,31 @@ body,
 .input-group > .input-group-prepend:not(:first-child) > .input-group-text,
 .input-group > .input-group-prepend:first-child > .btn:not(:first-child),
 .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child) {
-  @include border-left-radius($border-radius);
-  @include border-right-radius(0);
+  @include border-start-radius($border-radius);
+  @include border-end-radius(0);
 }
 
 .input-group > .form-control:not(:last-child),
-.input-group > .custom-select:not(:last-child) {
-  @include border-left-radius(0);
-  @include border-right-radius($border-radius);
+.input-group > .form-select:not(:last-child) {
+  @include border-start-radius(0);
+  @include border-end-radius($border-radius);
 }
 
 .btn-group > .btn:first-child:not(.dropdown-toggle) {
-  @include border-right-radius($border-radius);
+  @include border-end-radius($border-radius);
 }
 
 .btn-group > .btn:not(:last-child):not(.dropdown-toggle),
 .btn-group > .btn-group:not(:last-child) > .btn {
-  @include border-left-radius(0);
+  @include border-start-radius(0);
   margin-left: -1px;
 }
 
 .btn-group > .btn:last-child:not(.dropdown-toggle) {
-  @include border-left-radius($border-radius);
+  @include border-start-radius($border-radius);
 }
 
 .btn-group > .btn:not(:first-child),
 .btn-group > .btn-group:not(:first-child) {
-  @include border-right-radius(0);
+  @include border-end-radius(0);
 }
