Fix CSS Vars prefix

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -104,6 +104,9 @@ $input-btn-padding-x:              1rem;
 $input-max-width:                  100%;
 $btn-disabled-opacity:             .4;
 
+// Remove prefix added in BS5 for compat with Joomla beta's shipped with Betas
+$variable-prefix:                  '';
+
 // Toolbar
 $atum-toolbar-line-height:         2.45rem;
 
