--- a/templates/cassiopeia/scss/tools/variables/_variables.scss
+++ b/templates/cassiopeia/scss/tools/variables/_variables.scss
@@ -7,6 +7,8 @@ $cassiopeia-header-grad:              linear-gradient(135deg, var(--cassiopeia-c
 $cassiopeia-header-grad-rtl:          linear-gradient(135deg, var(--cassiopeia-color-hover) 0%, var(--cassiopeia-color-primary) 100%);
 $cassiopeia-inverted-text-color:      var(--cassiopeia-color-hover);
 
+// Remove prefix added in BS5 for compat with Joomla beta's shipped with Betas
+$variable-prefix:                     '';
 
 // Color system
 
