--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -4,7 +4,7 @@
 
   .container-main {
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
@@ -13,7 +13,7 @@
     }
 
     #content {
-      @include media-breakpoint-down(sm) {
+      @include media-breakpoint-down(md) {
         max-width: 98%;
         padding: 0;
       }
@@ -30,7 +30,7 @@
     border-radius: 3px;
     box-shadow: 0 0 10px 0 #ccc;
 
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(lg) {
       margin-top: 2rem;
     }
 
@@ -77,7 +77,7 @@
       span {
         font-size: ($font-size-base * .9);
 
-        @include media-breakpoint-down(xs) {
+        @include media-breakpoint-down(sm) {
           width: 100%;
         }
 
@@ -126,7 +126,7 @@
     flex-direction: column;
     max-width: $sidebar-width-login;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       order: 2;
     }
 
@@ -159,7 +159,7 @@
       }
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       position: relative;
       bottom: 0;
     }
@@ -168,7 +168,7 @@
   .container-main,
   .sidebar-wrapper {
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       flex: 1 0 100% !important;
       max-width: 100% !important;
     }
@@ -176,7 +176,7 @@
 
   .d-flex {
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       display: flex !important;
       flex-wrap: wrap;
     }
@@ -201,7 +201,7 @@ label {
   margin-top: 100px;
   text-align: center;
 
-  @include media-breakpoint-down(sm) {
+  @include media-breakpoint-down(md) {
     margin-top: 10px;
   }
 }
@@ -218,13 +218,13 @@ label {
 
 .view-login {
   #wrapper.d-flex {
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       display: flex !important;
     }
   }
 
   #sidebar-wrapper:not(.show):not(.collapse) {
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       display: block;
     }
   }
