More BS4 compat + remove input-group-append

--- a/administrator/templates/atum/scss/blocks/_form.scss
+++ b/administrator/templates/atum/scss/blocks/_form.scss
@@ -176,6 +176,11 @@ legend {
   margin-right: 1px;
 }
 
+// Backwards compat with BS4
 .custom-select {
   @extend .form-select;
+}
+
+.form-group {
+  @extend .mb-3
 }
