--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -26,7 +26,7 @@
     padding: 15px;
     margin-top: 9rem;
     color: var(--atum-text-dark);
-    background: var(--white);
+    background: var(--atum-sidebar-bg);
     border-radius: 3px;
     box-shadow: 0 0 10px 0 #ccc;
 
