All remaining breakpoints and add back white css var

--- a/administrator/templates/atum/scss/blocks/_modals.scss
+++ b/administrator/templates/atum/scss/blocks/_modals.scss
@@ -124,7 +124,7 @@
     display: flex;
     border-bottom: 1px solid $table-border-color;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       flex-direction: column;
     }
   }
@@ -145,7 +145,7 @@
       }
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       flex: 1 0 auto;
       max-width: 100%;
       text-align: left;
