--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -69,7 +69,7 @@
       max-width: calc(100% - 1rem);
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       flex: 1 1 calc(50% - 1rem);
       width: calc(50% - 1rem);
       max-width: calc(50% - 1rem);
@@ -113,7 +113,7 @@
       max-width: calc(100% - 1rem);
     }
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(md) {
       flex: 1 1 calc(50% - 1rem);
       width: calc(50% - 1rem);
       max-width: calc(50% - 1rem);
