admin badge backgrounds

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -203,6 +203,9 @@ $warning-txt:                      #000;
 $danger-bg:                        #900;
 $danger-txt:                       #fff;
 
+$info-bg:                          $gray-300;
+$info-txt:                         $white;
+
 // Input Group
 $input-group-addon-color:          var(--white);
 $input-group-addon-bg:             $base-color;
