--- a/administrator/templates/atum/scss/blocks/_layout.scss
+++ b/administrator/templates/atum/scss/blocks/_layout.scss
@@ -7,6 +7,7 @@
   border: 1px solid var(--bluegray);
 
   > legend {
+    float: none;
     width: auto;
     padding: 0 .5rem;
     font-weight: $font-weight-bold;
