--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -154,10 +154,10 @@ $body-color:                       var(--atum-text-dark); //only used in bootstr
 
 // Tables
 $table-bg:                         var(--white);
-$table-cell-padding-y:             .75rem !default;
-$table-cell-padding-x:             .75rem !default;
-$table-cell-padding-y-sm:          .3rem !default;
-$table-cell-padding-x-sm:          .3rem !default;
+$table-cell-padding-y:             .75rem;
+$table-cell-padding-x:             .75rem;
+$table-cell-padding-y-sm:          .3rem;
+$table-cell-padding-x-sm:          .3rem;
 $table-group-separator-color:      $gray-300;
 
 // Dropdowns
