More stuff to plugins

--- a/administrator/templates/atum/scss/pages/_com_templates.scss
+++ b/administrator/templates/atum/scss/pages/_com_templates.scss
@@ -45,4 +45,9 @@
       }
     }
   }
+
+  // TODO: Figure out why this is required. Presumably it shouldn't be!
+  .gjs-pn-buttons {
+    min-height: 33px;
+  }
 }
